# k2spicedb

./: .pylintrc  Dockerfile  README.md  pyproject.toml  realm.json  realm2.json  schema.zed  setup.py
.github/workflows/: pylint.yml
docs/: ARCHITECTURE.md
src/k2spicedb/: __init__.py  cli.py  keycloak_parser.py  llm_transformer.py  schema_generator.py
tests/: test_cli.py  test_keycloak_parser.py  test_llm_transformer.py  test_schema_generator.py
