[tool.poetry]
name = "k2spicedb"
version = "0.1.0"
description = "A tool to migrate Keycloak realms to SpiceDB schemas"
authors = ["James Staud <james.staud@gmail.com>"]
license = "MIT"
packages = [{ include = "k2spicedb", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.20"
langchain-openai = "^0.3.8"
openai = ">=1.58.1,<2.0.0"
typer = "^0.9.0"  # For CLI
rich = "^13.0.0"  # For CLI output styling
jsonschema = "^4.17.3"  # Optional: for validating Keycloak JSON

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.12.2"
setuptools = "^58.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"